--- a/css/style.css
+++ b/css/style.css
@@ -1983,11 +1983,12 @@ table {
           background-position: -51px -192px; }
     .brend_block_box_logo_block {
       width: 100%; }
-      .brend_block_box_logo_block a {
-        display: block;
+      .brend_block_box_logo_block .logo_line {
         float: left;
         width: 50%;
-        text-align: center;
+        text-align: center; }
+      .brend_block_box_logo_block a {
+        display: inline-block;
         transition: 1s;
         -moz-transition: 1s;
         -webkit-transition: 1s;
@@ -1998,8 +1999,63 @@ table {
           -o-transform: scale(1.3);
           -ms-transform: scale(1.3);
           transform: scale(1.3); }
-        .brend_block_box_logo_block a img {
-          max-width: 100%; }
+      .brend_block_box_logo_block .bg-good1 {
+        width: 71px;
+        height: 44px;
+        background: url("../img/sprite_header.png") -200px -336px; }
+      .brend_block_box_logo_block .bg-good2 {
+        width: 71px;
+        height: 44px;
+        background: url("../img/sprite_header.png") -271px -336px; }
+      .brend_block_box_logo_block .bg-good3 {
+        width: 72px;
+        height: 36px;
+        background: url("../img/sprite_header.png") -205px -403px; }
+      .brend_block_box_logo_block .bg-good4 {
+        width: 70px;
+        height: 36px;
+        background: url("../img/sprite_header.png") -277px -403px; }
+      .brend_block_box_logo_block .bg-good5 {
+        width: 65px;
+        height: 38px;
+        background: url("../img/sprite_header.png") -453px 0; }
+      .brend_block_box_logo_block .bg-good6 {
+        width: 70px;
+        height: 38px;
+        background: url("../img/sprite_header.png") -135px -403px; }
+      .brend_block_box_logo_block .bg-cheap1 {
+        width: 63px;
+        height: 44px;
+        background: url("../img/sprite_header.png") 0 -403px; }
+      .brend_block_box_logo_block .bg-cheap2 {
+        width: 72px;
+        height: 44px;
+        background: url("../img/sprite_header.png") -56px -336px; }
+      .brend_block_box_logo_block .bg-cheap3 {
+        width: 73px;
+        height: 38px;
+        background: url("../img/sprite_header.png") -342px -336px; }
+      .brend_block_box_logo_block .bg-cheap4 {
+        width: 72px;
+        height: 38px;
+        background: url("../img/sprite_header.png") -63px -403px; }
+      .brend_block_box_logo_block .bg-prestig1 {
+        width: 88px;
+        height: 44px;
+        background: url("../img/sprite_header.png") 0 -292px; }
+      .brend_block_box_logo_block .bg-prestig2 {
+        width: 72px;
+        height: 44px;
+        background: url("../img/sprite_header.png") -128px -336px; }
+      .brend_block_box_logo_block .bg-prestig3 {
+        width: 86px;
+        height: 44px;
+        background: url("../img/sprite_header.png") -88px -292px; }
+      .brend_block_box_logo_block .bg-prestig4 {
+        width: 143px;
+        height: 25px;
+        float: left;
+        background: url("../img/sprite_header.png") -174px -292px; }
       .brend_block_box_logo_block .big {
         width: 70%;
         float: left; }
@@ -2040,7 +2096,10 @@ table {
         float: right;
         display: block;
         margin-top: 1px;
-        margin-right: 1px; }
+        margin-right: 1px;
+        width: 56px;
+        height: 67px;
+        background: url("../img/sprite_header.png") 0 -336px; }
     .brend_block_footer_brend_all {
       float: left;
       width: 34.33%;
@@ -2386,9 +2445,45 @@ table {
     display: table-cell;
     height: 310px;
     overflow: hidden; }
-    .price_block_img_block img {
-      max-width: 100%;
-      display: none; }
+    .price_block_img_block .img {
+      display: none;
+      margin: 0px auto; }
+    .price_block_img_block .bg-img0 {
+      width: 260px;
+      height: 221px;
+      background: url("../img/sprite_header.png") -1572px -612px; }
+    .price_block_img_block .bg-img1 {
+      width: 289px;
+      height: 239px;
+      background: url("../img/sprite_header.png") -1839px -507px; }
+    .price_block_img_block .bg-img2 {
+      width: 275px;
+      height: 308px;
+      background: url("../img/sprite_header.png") 0 -1122px; }
+    .price_block_img_block .bg-img3 {
+      width: 250px;
+      height: 269px;
+      background: url("../img/sprite_header.png") -1839px -746px; }
+    .price_block_img_block .bg-img4 {
+      width: 265px;
+      height: 265px;
+      background: url("../img/sprite_header.png") -1839px -242px; }
+    .price_block_img_block .bg-img5 {
+      width: 299px;
+      height: 242px;
+      background: url("../img/sprite_header.png") -1839px 0; }
+    .price_block_img_block .bg-img6 {
+      width: 276px;
+      height: 228px;
+      background: url("../img/sprite_header.png") -1839px -1270px; }
+    .price_block_img_block .bg-img7 {
+      width: 266px;
+      height: 306px;
+      background: url("../img/sprite_header.png") -1572px -306px; }
+    .price_block_img_block .bg-img8 {
+      width: 267px;
+      height: 306px;
+      background: url("../img/sprite_header.png") -1572px 0; }
     .price_block_img_block .action {
       display: inline-block; }
   .price_block_nav {
@@ -2758,10 +2853,34 @@ table {
     display: table-cell;
     text-align: center;
     vertical-align: middle; }
-    .services_block_img_wrap img {
-      display: inline-block;
-      max-width: 100%;
-      display: none; }
+    .services_block_img_wrap .img {
+      margin: 0 auto;
+      display: none;
+      max-width: 100%; }
+    .services_block_img_wrap .bg-vimtex {
+      width: 259px;
+      height: 255px;
+      background: url("../img/sprite_header.png") -1839px -1015px; }
+    .services_block_img_wrap .bg-image1 {
+      width: 294px;
+      height: 264px;
+      background: url("../img/sprite_header.png") 0 -1430px; }
+    .services_block_img_wrap .bg-image2 {
+      width: 297px;
+      height: 254px;
+      background: url("../img/sprite_header.png") -294px -1430px; }
+    .services_block_img_wrap .bg-image3 {
+      width: 297px;
+      height: 241px;
+      background: url("../img/sprite_header.png") -597px -1430px; }
+    .services_block_img_wrap .bg-image4 {
+      width: 297px;
+      height: 238px;
+      background: url("../img/sprite_header.png") -586px -1122px; }
+    .services_block_img_wrap .bg-image5 {
+      width: 297px;
+      height: 270px;
+      background: url("../img/sprite_header.png") -275px -1122px; }
     .services_block_img_wrap .action {
       display: inline-block; }
   .services_block_nav {
@@ -2911,29 +3030,43 @@ table {
       .question_block_slider_wrap_slider_block .slide1 {
         background: url("../img/slide1.jpg") center top no-repeat; }
       .question_block_slider_wrap_slider_block .slide2 {
-        background: url("../img/slide2.jpg") center top no-repeat; }
+        width: 527px;
+        height: 225px;
+        background: url("../img/sprite_header.png") 0 -447px; }
         .question_block_slider_wrap_slider_block .slide2 a {
           margin-top: 85px; }
       .question_block_slider_wrap_slider_block .slide3 {
-        background: url("../img/slide3.jpg") center top no-repeat; }
+        width: 527px;
+        height: 225px;
+        background: url("../img/sprite_header.png") -1045px 0; }
       .question_block_slider_wrap_slider_block .slide4 {
-        background: url("../img/slide4.jpg") center top no-repeat; }
+        width: 527px;
+        height: 225px;
+        background: url("../img/sprite_header.png") 0 -672px; }
         .question_block_slider_wrap_slider_block .slide4 a {
           margin-top: 35px; }
       .question_block_slider_wrap_slider_block .slide5 {
-        background: url("../img/slide5.jpg") center top no-repeat; }
+        width: 527px;
+        height: 225px;
+        background: url("../img/sprite_header.png") 0 -897px; }
         .question_block_slider_wrap_slider_block .slide5 a {
           margin-top: 85px; }
       .question_block_slider_wrap_slider_block .slide6 {
-        background: url("../img/slide6.jpg") center top no-repeat; }
+        width: 527px;
+        height: 225px;
+        background: url("../img/sprite_header.png") -1045px -225px; }
         .question_block_slider_wrap_slider_block .slide6 a {
           margin-top: 85px; }
       .question_block_slider_wrap_slider_block .slide7 {
-        background: url("../img/slide7.jpg") center top no-repeat; }
+        width: 527px;
+        height: 225px;
+        background: url("../img/sprite_header.png") -1045px -450px; }
         .question_block_slider_wrap_slider_block .slide7 a {
           margin-top: 70px; }
       .question_block_slider_wrap_slider_block .slide8 {
-        background: url("../img/slide8.jpg") center top no-repeat; }
+        width: 527px;
+        height: 225px;
+        background: url("../img/sprite_header.png") -527px -897px; }
         .question_block_slider_wrap_slider_block .slide8 a {
           margin-top: 85px; }
 
