--- a/css/style.css
+++ b/css/style.css
@@ -3632,6 +3632,39 @@ table {
               width: 100%; } }
           .comment_block .individuals_block_slide_header_men_foto {
             float: left; }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man1 {
+              width: 108px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") 0 -73px;
+              /**/ }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man2 {
+              width: 68px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") -362px 0; }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man3 {
+              width: 91px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") -95px -174px; }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man4 {
+              width: 104px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") -258px 0; }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man5 {
+              width: 108px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") -150px 0; }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man6 {
+              width: 86px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") -186px -174px; }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man7 {
+              width: 95px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") 0 -174px; }
+            .comment_block .individuals_block_slide_header_men_foto .bg-w_man8 {
+              width: 71px;
+              height: 101px;
+              background: url("../img/sprite_footer.png") -272px -174px; }
             @media (max-height: 750px) {
               .comment_block .individuals_block_slide_header_men_foto {
                 height: 101px; }
@@ -3710,8 +3743,10 @@ table {
               display: block;
               width: 20px;
               height: 20px; }
-            .comment_block .individuals_block_slide_header_yandex_block_baner_yandex img {
-              max-width: 100%; }
+            .comment_block .individuals_block_slide_header_yandex_block_baner_yandex .bg-yandex_baner {
+              width: 274px;
+              height: 105px;
+              background: url("../img/sprite_footer.png") -430px -300px; }
       .comment_block .individuals_block_slide_content {
         float: left;
         width: 100%;
@@ -3796,9 +3831,11 @@ table {
               font: 20px/40px 'robotobold';
               color: #2d2d2d;
               margin: 22px 0px; }
-              .comment_block .individuals_block_slide_content_quality_zag h4 a {
+              .comment_block .individuals_block_slide_content_quality_zag h4 .bg-logo_comment {
                 display: inline-block;
-                margin-right: 12px; }
+                width: 103px;
+                height: 40px;
+                background: url("../img/sprite_footer.png") -650px -300px; }
   .comment_block .entity_wrap {
     float: left;
     width: 100%;
