--- a/sass/schem.scss
+++ b/sass/schem.scss
@@ -51,6 +51,30 @@
       margin-right: 0px;
     }
   }
+  .bg-schema {
+    display: inline-block;
+    width: 194px; height: 143px;
+    background: url('../img/sprite_footer.png') -1182px -493px;
+    -webkit-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+    -moz-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+  }
+  .bg-foto {
+    display: inline-block;
+    width: 194px; height: 143px;
+    background: url('../img/sprite_footer.png') -988px -493px;
+    -webkit-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+    -moz-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+  }
+  .bg-map {
+    display: inline-block;
+    width: 196px; height: 143px;
+    background: url('../img/sprite_footer.png')  -792px -493px;
+    -webkit-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+    -moz-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+  }
 }
 
 .schem_big_block {
@@ -58,7 +82,7 @@
   top: 50%;
   left: 50%;
   width: 100%;
-  max-width:1083px;
+  max-width:1113px;
   background: #FFFFFF;
   padding: 15px;
   box-sizing: border-box;
@@ -131,13 +155,19 @@
       height: 500px;
       #schem1{
         display: inline-block;
-      }
-      img {
-        max-width: 100%;
-        display: none;
-        max-height: 90vh;
+        width: 800px; height: 424px;
+        background: url('../img/sprite_footer.png') -0 -725px;
 
       }
+      #schem2{
+        display: inline-block;
+        width: 1083px; height: 493px;
+        background: url('../img/sprite_footer.png') -792px -0;
+        display: none;
+      }
+.schem_img{
+  display: inline-block;
+}
     }
   }
   .scheme_close,.map_close{
@@ -174,7 +204,13 @@
     }
   }
 }
-
+.foto_block{
+  .bg-Vimtex {
+    display: inline-block;
+    width: 700px; height: 447px;
+    background: url('../img/sprite_footer.png') -0 -1149px;
+  }
+}
 .map_block {
 width: 700px;
   height: 550px;
