--- a/css/power_calculator.css
+++ b/css/power_calculator.css
@@ -332,7 +332,7 @@ table {
               box-sizing: border-box;
               min-width: 100px; }
               .power_calculator_coontent_form_base_line .input_block .select:hover .arow {
-                background: url("../img/temp_hover/hover_calcul.png") center no-repeat; }
+                background: url("../img/sprite_section.png") -1023px -1791px; }
               .power_calculator_coontent_form_base_line .input_block .select input[type='text'] {
                 border: none;
                 float: left;
