--- a/sass/power_calculator.scss
+++ b/sass/power_calculator.scss
@@ -286,7 +286,7 @@
               min-width: 100px;
               &:hover{
                 .arow{
-                  background: url("../img/temp_hover/hover_calcul.png") center no-repeat;
+                  background: url('../img/sprite_section.png') -1023px -1791px;
                 }
               }
               input[type='text'] {
