--- a/css/modal.css
+++ b/css/modal.css
@@ -409,7 +409,7 @@
   left: 0px;
   width: 303px;
   height: 47px;
-  background-image: url("../img/logo_modal.png");
+  background: url("../img/sprite_header.png") -240px -2301px;
   padding-left: 21px;
   box-sizing: border-box;
   display: none;
@@ -1308,8 +1308,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 68.37%;
-  min-width: 800px;
+  width: 67.37%;
   height: 310px;
   overflow: hidden;
   background: #FFFFFF;
@@ -1317,7 +1316,7 @@
   -webkit-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
   box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
-  padding-left: 1.7%;
+  padding: 00px 1.7%;
   box-sizing: border-box;
   display: none;
   z-index: 9; }
@@ -1360,7 +1359,7 @@
       text-align: center;
       padding-left: 12px;
       box-sizing: border-box;
-      margin-top: 38px; }
+      margin-top: 45px; }
       .services_block_link_box_block:hover a {
         color: #620909; }
       .services_block_link_box_block_img_line {
@@ -1407,7 +1406,7 @@
         background: url("../img/sprite_header.png") -362px -153px;
         margin-left: -12px; }
   .services_block_img_table {
-    width: 38.25%;
+    width: 42.8%;
     display: table;
     float: left; }
   .services_block_img_wrap {
@@ -1449,7 +1448,7 @@
       display: inline-block; }
   .services_block_nav {
     width: 28.25%;
-    float: left;
+    float: right;
     padding-top: 18px; }
     @media (max-width: 762px) {
       .services_block_nav {
