--- a/css/price.css
+++ b/css/price.css
@@ -5,9 +5,9 @@
     width: 100%;
     min-height: 75px;
     position: relative;
-    webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.13);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.13);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.13);
+    webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.13);
+    -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.13);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.13);
     float: left;
     /**/
     border-radius: 5px;
@@ -19,9 +19,9 @@
       height: 20px;
       left: 10px;
       bottom: 15px;
-      -webkit-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      -moz-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
+      -webkit-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      -moz-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
       display: block;
       position: absolute;
       -moz-transform: rotate(-2deg);
@@ -35,9 +35,9 @@
       height: 20px;
       right: 10px;
       bottom: 15px;
-      -webkit-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      -moz-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
+      -webkit-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      -moz-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
       display: block;
       position: absolute;
       -moz-transform: rotate(2deg);
@@ -59,7 +59,7 @@
       box-sizing: border-box; }
       @media (max-width: 900px) {
         .section_description_shadow_text {
-          padding-left: 0px;
+          padding-left: 0;
           float: left; } }
       .section_description_shadow_text p {
         float: left;
@@ -89,9 +89,9 @@
       border-radius: 15px;
       -moz-border-radius: 15px;
       -webkit-border-radius: 15px;
-      -webkit-box-shadow: 0px 13px 16px 0px rgba(0, 0, 0, 0.29);
-      -moz-box-shadow: 0px 13px 16px 0px rgba(0, 0, 0, 0.29);
-      box-shadow: 0px 13px 16px 0px rgba(0, 0, 0, 0.29);
+      -webkit-box-shadow: 0 13px 16px 0 rgba(0, 0, 0, 0.29);
+      -moz-box-shadow: 0 13px 16px 0 rgba(0, 0, 0, 0.29);
+      box-shadow: 0 13px 16px 0 rgba(0, 0, 0, 0.29);
       margin-top: 33px;
       -moz-border-radius-topleft: 0px;
       -webkit-border-top-left-radius: 0px;
@@ -126,10 +126,10 @@
           background: linear-gradient(to bottom, white 0%, white 67%, #e3e3e3 100%);
           filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e3e3e3', GradientType=0);
           border: 1px solid #e77f5f;
-          margin: 0px 22.5px;
-          -webkit-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
-          -moz-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
-          box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+          margin: 0 22.5px;
+          -webkit-box-shadow: 0 -3px 7px 0 rgba(0, 0, 0, 0.14);
+          -moz-box-shadow: 0 -3px 7px 0 rgba(0, 0, 0, 0.14);
+          box-shadow: 0 -3px 7px 0 rgba(0, 0, 0, 0.14);
           padding-left: 15px;
           padding-right: 12px;
           box-sizing: border-box;
@@ -138,10 +138,10 @@
           z-index: 99; }
           @media (max-width: 580px) {
             .section_product_wrap_slider_block .slide {
-              margin: 0px 18px; } }
+              margin: 0 18px; } }
           @media (max-width: 391px) {
             .section_product_wrap_slider_block .slide {
-              margin: 0px 10px; } }
+              margin: 0 10px; } }
           .section_product_wrap_slider_block .slide_zag {
             float: left;
             width: 100%;
@@ -222,8 +222,11 @@
                 float: left;
                 margin-top: 28px;
                 width: 53.81%; }
-                .section_product_wrap_slider_block .slide_minimum_info__name_price .logo img {
-                  max-width: 100%; }
+                .section_product_wrap_slider_block .slide_minimum_info__name_price .logo .bg-slide_logo {
+                  display: block;
+                  width: 113px;
+                  height: 33px;
+                  background: url("../img/sprite_section.png") 0px -1791px; }
               .section_product_wrap_slider_block .slide_minimum_info__name_price .price {
                 float: right;
                 margin-top: 10px;
@@ -319,7 +322,7 @@
                     margin-left: 10px; }
                     .section_product_wrap_slider_block .slide__all_info__price_line .old .namber p span {
                       position: absolute;
-                      top: 0px;
+                      top: 0;
                       left: -4%;
                       width: 108%;
                       height: 11px;
@@ -543,7 +546,7 @@
             margin-top: 10px; }
             @media (max-width: 1083px) {
               .section_product_wrap_price_wrap .aside_zag i {
-                margin-left: 0px; } }
+                margin-left: 0; } }
             @media (max-width: 1063px) {
               .section_product_wrap_price_wrap .aside_zag i {
                 display: none; } }
@@ -622,8 +625,8 @@
               height: 100%;
               border: 4px solid transparent;
               position: absolute;
-              top: 0px;
-              left: 0px;
+              top: 0;
+              left: 0;
               box-sizing: border-box; }
             .section_product_wrap_price_wrap_section_block_block_line .block:hover {
               z-index: 10; }
@@ -651,12 +654,12 @@
             .section_product_wrap_price_wrap_section_block_block_line .block p {
               position: absolute;
               width: 100%;
-              padding: 0px 14px;
+              padding: 0 14px;
               box-sizing: border-box;
               font: 15px/18px Verdana;
               font-weight: bold;
               color: #FFFFFF;
-              left: 0px;
+              left: 0;
               bottom: 15px;
               letter-spacing: -0.8px; }
               .section_product_wrap_price_wrap_section_block_block_line .block p i {
@@ -754,7 +757,7 @@
       .section_product_wrap_price_wrap_hype {
         float: left;
         width: 100%;
-        padding: 6px 0px;
+        padding: 6px 0;
         background-color: #FFFFFF;
         text-align: center;
         margin-top: 18px;
@@ -1001,7 +1004,7 @@
           box-sizing: border-box; }
           @media (max-width: 1062px) {
             .section_product_wrap__manufactures__factory_block__brend {
-              padding: 0px 15px; } }
+              padding: 0 15px; } }
           .section_product_wrap__manufactures__factory_block__brend_text {
             float: left;
             width: 42.1%; }
@@ -1044,7 +1047,7 @@
                 width: 17px;
                 height: 18px;
                 background-image: url("../img/sprite_section.png");
-                background-position: 0px -192px;
+                background-position: 0 -192px;
                 float: left;
                 margin-right: 1%; }
               .section_product_wrap__manufactures__factory_block__brend_text .adres p {
@@ -1067,7 +1070,7 @@
                 text-align: center; } }
             .section_product_wrap__manufactures__factory_block__brend_link .no_link {
               width: 16%;
-              margin-right: 0px;
+              margin-right: 0;
               text-align: right; }
               @media (max-width: 480px) {
                 .section_product_wrap__manufactures__factory_block__brend_link .no_link {
@@ -1161,7 +1164,7 @@
                     .section_product_wrap__manufactures__factory_block__brend_link_line a span {
                       width: 100%; } }
                 .section_product_wrap__manufactures__factory_block__brend_link_line a:nth-last-child(1) {
-                  margin-right: 0px; }
+                  margin-right: 0; }
                   @media (max-width: 1062px) {
                     .section_product_wrap__manufactures__factory_block__brend_link_line a:nth-last-child(1) {
                       margin-right: 8px; } }
@@ -1182,7 +1185,7 @@
             .section_product_wrap__manufactures__factory_block__brend_smal_line ul {
               width: 47.9%; }
               .section_product_wrap__manufactures__factory_block__brend_smal_line ul:nth-last-child(1) {
-                margin-right: 0px; }
+                margin-right: 0; }
             .section_product_wrap__manufactures__factory_block__brend_smal_line .no_link {
               width: 30%; }
             @media (max-width: 1062px) {
@@ -1211,9 +1214,9 @@
       width: 100%;
       background: url("../img/buy.jpg") center top no-repeat;
       min-height: 515px;
-      -webkit-box-shadow: 0px 10px 27px 0px rgba(0, 0, 0, 0.13);
-      -moz-box-shadow: 0px 10px 27px 0px rgba(0, 0, 0, 0.13);
-      box-shadow: 0px 10px 27px 0px rgba(0, 0, 0, 0.13);
+      -webkit-box-shadow: 0 10px 27px 0 rgba(0, 0, 0, 0.13);
+      -moz-box-shadow: 0 10px 27px 0 rgba(0, 0, 0, 0.13);
+      box-shadow: 0 10px 27px 0 rgba(0, 0, 0, 0.13);
       margin-top: 43px;
       background-size: cover;
       overflow: hidden; }
@@ -1238,13 +1241,13 @@
           @media (max-width: 1126px) {
             .section_buy_block_line .block_wrap {
               width: 50%;
-              margin-right: 0px;
+              margin-right: 0;
               margin-bottom: 20px; } }
           @media (max-width: 538px) {
             .section_buy_block_line .block_wrap {
               width: 100%; } }
           .section_buy_block_line .block_wrap:nth-last-child(1) {
-            margin-right: 0px; }
+            margin-right: 0; }
         .section_buy_block_line_block {
           display: inline-block;
           width: 100%;
@@ -1253,12 +1256,16 @@
             width: 100%;
             position: relative;
             min-height: 282px; }
-            .section_buy_block_line_block .img img {
+            .section_buy_block_line_block .img .bg-product2 {
+              display: inline-block;
               margin-top: 23px;
               max-width: 100%;
               position: absolute;
-              top: 0px;
-              left: 0px; }
+              top: 0;
+              left: 0;
+              width: 263px;
+              height: 305px;
+              background: url("../img/sprite_section.png") -854px 0; }
             .section_buy_block_line_block .img_icon_line {
               min-height: 119px;
               width: 100%;
@@ -1269,15 +1276,14 @@
                 display: inline-block;
                 width: 119px;
                 height: 119px;
-                background-image: url("../img/buy_icon.png");
-                text-align: center; }
+                background: url("../img/sprite_section.png") -854px -305px; }
                 .section_buy_block_line_block .img_icon_line p span {
                   display: inline-block; }
                 .section_buy_block_line_block .img_icon_line p .icon1 {
                   width: 58px;
                   height: 62px;
                   background-image: url("../img/sprite_section.png");
-                  background-position: -183px 0px;
+                  background-position: -183px 0;
                   margin-top: 28.5px; }
                 .section_buy_block_line_block .img_icon_line p .icon2 {
                   width: 60px;
@@ -1307,7 +1313,7 @@
               z-index: 9;
               text-transform: uppercase;
               margin-top: 25px;
-              text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25); }
+              text-shadow: 0 2px 1px rgba(0, 0, 0, 0.25); }
             .section_buy_block_line_block .img .big {
               margin-top: 18px; }
           .section_buy_block_line_block_text_line {
@@ -1319,7 +1325,7 @@
               width: 100%;
               max-width: 235px;
               height: 85px;
-              background: url("../img/buy_text.png") center top no-repeat; }
+              background: url("../img/sprite_section.png") -1833px -961px; }
               .section_buy_block_line_block_text_line .text p {
                 width: 100%;
                 font: 13px/22px Verdana;
@@ -1447,7 +1453,7 @@
             outline: 1px solid #b80000;
             text-decoration: none; }
           .section__recommended_header_info a:nth-child(1) {
-            margin-right: 0px; }
+            margin-right: 0; }
           .section__recommended_header_info a .see {
             width: 29px;
             height: 22px;
@@ -1459,7 +1465,7 @@
             width: 25px;
             height: 22px;
             background-image: url("../img/sprite_section.png");
-            background-position: 0px -170px;
+            background-position: 0 -170px;
             margin-right: 9px;
             display: inline-block; }
           .section__recommended_header_info a span {
@@ -1481,11 +1487,11 @@
           @media (max-width: 1166px) {
             .section__recommended_product_box .product_line .product_block {
               width: 50%;
-              margin-right: 0px;
+              margin-right: 0;
               text-align: center;
               margin-bottom: 20px; } }
           @media (max-width: 508px) {
             .section__recommended_product_box .product_line .product_block {
               width: 100%; } }
           .section__recommended_product_box .product_line .product_block:nth-last-child(1) {
-            margin-right: 0px; }
+            margin-right: 0; }
