--- a/sass/price.scss
+++ b/sass/price.scss
@@ -55,9 +55,9 @@
     width: 100%;
     min-height: 75px;
     position: relative;
-    webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.13);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.13);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.13);
+    webkit-box-shadow:0 0 10px 0 rgba(0, 0, 0, 0.13);
+    -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.13);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.13);
     float: left;
     @include radius(5px);
     &:before {
@@ -66,9 +66,9 @@
       height: 20px;
       left: 10px;
       bottom: 15px;
-      -webkit-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      -moz-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
+      -webkit-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      -moz-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
       display: block;
       position: absolute;
       -moz-transform: rotate(-2deg);
@@ -83,9 +83,9 @@
       height: 20px;
       right: 10px;
       bottom: 15px;
-      -webkit-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      -moz-box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
-      box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.33);
+      -webkit-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      -moz-box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
+      box-shadow: 0 10px 13px 0 rgba(0, 0, 0, 0.33);
       display: block;
       position: absolute;
       -moz-transform: rotate(2deg);
@@ -104,7 +104,7 @@
       padding-left: 1.53%;
       box-sizing: border-box;
       @media(max-width: 900px) {
-        padding-left: 0px;
+        padding-left: 0;
         float: left;
       }
       p {
@@ -136,9 +136,9 @@
       background-color: rgba(237, 215, 128, 0.5);
       float: left;
       @include radius(15px);
-      -webkit-box-shadow: 0px 13px 16px 0px rgba(0, 0, 0, 0.29);
-      -moz-box-shadow: 0px 13px 16px 0px rgba(0, 0, 0, 0.29);
-      box-shadow: 0px 13px 16px 0px rgba(0, 0, 0, 0.29);
+      -webkit-box-shadow: 0 13px 16px 0 rgba(0, 0, 0, 0.29);
+      -moz-box-shadow: 0 13px 16px 0 rgba(0, 0, 0, 0.29);
+      box-shadow: 0 13px 16px 0 rgba(0, 0, 0, 0.29);
       margin-top: 33px;
       @include top_left_radius(0px);
       h2 {
@@ -172,10 +172,10 @@
           background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 67%, rgba(227, 227, 227, 1) 100%);
           filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e3e3e3', GradientType=0);
           border: 1px solid #e77f5f;
-          margin: 0px 22.5px;
-          -webkit-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
-          -moz-box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
-          box-shadow: 0px -3px 7px 0px rgba(0, 0, 0, 0.14);
+          margin: 0 22.5px;
+          -webkit-box-shadow: 0 -3px 7px 0 rgba(0, 0, 0, 0.14);
+          -moz-box-shadow: 0 -3px 7px 0 rgba(0, 0, 0, 0.14);
+          box-shadow: 0 -3px 7px 0 rgba(0, 0, 0, 0.14);
           padding-left: 15px;
           padding-right: 12px;
           box-sizing: border-box;
@@ -183,10 +183,10 @@
           max-width: 320px;
           z-index: 99;
           @media (max-width: 580px) {
-            margin: 0px 18px;
+            margin: 0 18px;
           }
           @media (max-width: 391px) {
-            margin: 0px 10px;
+            margin: 0 10px;
           }
           &_zag {
             float: left;
@@ -277,8 +277,10 @@
                 float: left;
                 margin-top: 28px;
                 width: 53.81%;
-                img {
-                  max-width: 100%;
+                .bg-slide_logo {
+                  display: block;
+                  width: 113px; height: 33px;
+                  background: url('../img/sprite_section.png') 0px -1791px;
                 }
               }
               .price {
@@ -397,7 +399,7 @@
                     margin-left: 10px;
                     span {
                       position: absolute;
-                      top: 0px;
+                      top: 0;
                       left: -4%;
                       width: 108%;
                       height: 11px;
@@ -680,7 +682,7 @@
             margin-left: 4px;
             margin-top: 10px;
             @media(max-width: 1083px) {
-              margin-left: 0px;
+              margin-left: 0;
             }
             @media(max-width: 1063px) {
               display: none;
@@ -777,8 +779,8 @@
               height: 100%;
               border: 4px solid rgba(0, 0, 0, 0);
               position: absolute;
-              top: 0px;
-              left: 0px;
+              top: 0;
+              left: 0;
               box-sizing: border-box;
             }
             &:hover {
@@ -816,12 +818,12 @@
             p {
               position: absolute;
               width: 100%;
-              padding: 0px 14px;
+              padding: 0 14px;
               box-sizing: border-box;
               font: 15px/18px Verdana;
               font-weight: bold;
               color: #FFFFFF;
-              left: 0px;
+              left: 0;
               bottom: 15px;
               letter-spacing: -0.8px;
               i {
@@ -958,7 +960,7 @@
       &_hype {
         float: left;
         width: 100%;
-        padding: 6px 0px;
+        padding: 6px 0;
         background-color: #FFFFFF;
         text-align: center;
         margin-top: 18px;
@@ -1271,7 +1273,7 @@
           margin-top: 12px;
           box-sizing: border-box;
           @media(max-width: 1062px) {
-            padding: 0px 15px;
+            padding: 0 15px;
           }
           &_text {
             float: left;
@@ -1321,7 +1323,7 @@
                 width: 17px;
                 height: 18px;
                 background-image: url("../img/sprite_section.png");
-                background-position: 0px -192px;
+                background-position: 0 -192px;
                 float: left;
                 margin-right: 1%;
               }
@@ -1350,7 +1352,7 @@
             }
             .no_link {
               width: 16%;
-              margin-right: 0px;
+              margin-right: 0;
               text-align: right;
               @media(max-width: 480px){
                 width: 33.33%;
@@ -1457,7 +1459,7 @@
                   }
                 }
                 &:nth-last-child(1) {
-                  margin-right: 0px;
+                  margin-right: 0;
                   @media(max-width: 1062px) {
                     margin-right: 8px;
                   }
@@ -1484,7 +1486,7 @@
             ul {
               width: 47.9%;
               &:nth-last-child(1) {
-                margin-right: 0px;
+                margin-right: 0;
               }
             }
             .no_link {
@@ -1524,9 +1526,9 @@
       width: 100%;
       background: url("../img/buy.jpg") center top no-repeat;
       min-height: 515px;
-      -webkit-box-shadow: 0px 10px 27px 0px rgba(0, 0, 0, 0.13);
-      -moz-box-shadow: 0px 10px 27px 0px rgba(0, 0, 0, 0.13);
-      box-shadow: 0px 10px 27px 0px rgba(0, 0, 0, 0.13);
+      -webkit-box-shadow: 0 10px 27px 0 rgba(0, 0, 0, 0.13);
+      -moz-box-shadow: 0 10px 27px 0 rgba(0, 0, 0, 0.13);
+      box-shadow: 0 10px 27px 0 rgba(0, 0, 0, 0.13);
       margin-top: 43px;
       background-size: cover;
       overflow: hidden;
@@ -1552,7 +1554,7 @@
           text-align: center;
           @media(max-width: 1126px) {
             width: 50%;
-            margin-right: 0px;
+            margin-right: 0;
             margin-bottom: 20px;
           }
           @media(max-width: 538px) {
@@ -1560,7 +1562,7 @@
 
           }
           &:nth-last-child(1) {
-            margin-right: 0px;
+            margin-right: 0;
           }
         }
         &_block {
@@ -1572,12 +1574,15 @@
             width: 100%;
             position: relative;
             min-height: 282px;
-            img {
+            .bg-product2{
+              display: inline-block;
               margin-top: 23px;
               max-width: 100%;
               position: absolute;
-              top: 0px;
-              left: 0px;
+              top: 0;
+              left: 0;
+              width: 263px; height: 305px;
+              background: url('../img/sprite_section.png') -854px -0;
             }
             &_icon_line {
               min-height: 119px;
@@ -1587,10 +1592,9 @@
               z-index: 9;
               p {
                 display: inline-block;
-                width: 119px;
-                height: 119px;
-                background-image: url("../img/buy_icon.png");
-                text-align: center;
+                width: 119px; height: 119px;
+                background: url('../img/sprite_section.png') -854px -305px;
+
                 span {
                   display: inline-block;
                 }
@@ -1598,7 +1602,7 @@
                   width: 58px;
                   height: 62px;
                   background-image: url("../img/sprite_section.png");
-                  background-position: -183px 0px;
+                  background-position: -183px 0;
                   margin-top: 28.5px;
                 }
                 .icon2 {
@@ -1634,7 +1638,7 @@
               z-index: 9;
               text-transform: uppercase;
               margin-top: 25px;
-              text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25);
+              text-shadow: 0 2px 1px rgba(0, 0, 0, 0.25);
             }
             .big {
               margin-top: 18px;
@@ -1649,7 +1653,7 @@
               width: 100%;
               max-width: 235px;
               height: 85px;
-              background: url("../img/buy_text.png") center top no-repeat;
+              background: url('../img/sprite_section.png')  -1833px -961px;
               p {
                 width: 100%;
                 font: 13px/22px Verdana;
@@ -1806,7 +1810,7 @@
             text-decoration: none;
           }
           &:nth-child(1) {
-            margin-right: 0px;
+            margin-right: 0;
           }
           .see {
             width: 29px;
@@ -1820,7 +1824,7 @@
             width: 25px;
             height: 22px;
             background-image: url("../img/sprite_section.png");
-            background-position: 0px -170px;
+            background-position: 0 -170px;
             margin-right: 9px;
             display: inline-block;
           }
@@ -1846,7 +1850,7 @@
           margin-right: 5%;
           @media(max-width: 1166px) {
             width: 50%;
-            margin-right: 0px;
+            margin-right: 0;
             text-align: center;
             margin-bottom: 20px;
           }
@@ -1855,7 +1859,7 @@
 
           }
           &:nth-last-child(1) {
-            margin-right: 0px;
+            margin-right: 0;
           }
         }
       }
